0.20.47	UNRELEASED

 * Add -b argument to ``dulwich clone``.
   (Jelmer Vernooĳ)

 * On Windows, provide a hint about developer mode
   when creating symlinks fails due to a permission
   error. (Jelmer Vernooĳ, #1005)

 * Add new ``ObjectID`` type in ``dulwich.objects``,
   currently just an alias for ``bytes``.
   (Jelmer Vernooĳ)

 * Support repository format version 1.
   (Jelmer Vernooĳ, #1056)

 * Support \r\n line endings with continuations when parsing
   configuration files.  (Jelmer Vernooĳ)

 * Fix handling of SymrefLoop in RefsContainer.__setitem__.
   (Dominic Davis-Foster, Jelmer Vernooĳ)

0.20.46	2022-09-06

 * Apply insteadOf to rsync-style location strings
   (previously it was just applied to URLs).
   (Jelmer Vernooĳ, python-poetry/poetry#6329)

 * Drop use of certifi, instead relying on urllib3's default
   code to find system CAs. (Jelmer Vernooĳ, #1025)

 * Implement timezone parsing in porcelain.
   (springheeledjack0, #1026)

 * Drop support for running without setuptools.
   (Jelmer Vernooĳ)

 * Ensure configuration is loaded when
   running "dulwich clone".
   (Jelmer Vernooĳ)

 * Build 32 bit wheels for Windows.
   (Benjamin Parzella)

 * tests: Ignore errors when deleting GNUPG 
   home directory. Fixes spurious errors racing
   gnupg-agent. Thanks, Matěj Cepl. Fixes #1000

 * config: Support closing brackets in quotes in section
   names. (Jelmer Vernooĳ, #10124)

 * Various and formatting fixes. (Kian-Meng Ang)

 * Document basic authentication in dulwich.porcelain.clone.
   (TuringTux)

 * Flush before calling fsync, ensuring buffers
   are filled. (wernha)

 * Support GPG commit signing. (springheeledjack0)

 * Add python 3.11 support. (Saugat Pachhai)

 * Allow missing GPG during tests. (Jakub Kulík)

 * status: return posix-style untracked paths instead of nt-style paths on
   win32 (Daniele Trifirò)

 * Honour PATH environment when running C Git for testing.
   (Stefan Sperling)
